Bug 1510715 - Backed out changeset d15f0ac561d9 (bug 1260527) a=backout