netwerk/ipc/NeckoChild.h
@@ -25,7 +25,9 @@ public:
   static void InitNeckoChild();
 
 protected:
-  virtual PHttpChannelChild* AllocPHttpChannelChild() override;
+  virtual PHttpChannelChild*
+    AllocPHttpChannelChild(const PBrowserOrId&, const SerializedLoadContext&,
+                           const HttpChannelCreationArgs& aOpenArgs) override;
   virtual bool DeallocPHttpChannelChild(PHttpChannelChild*) override;
 
   virtual PStunAddrsRequestChild* AllocPStunAddrsRequestChild() override;
