netwerk/protocol/http/HttpChannelParent.h
@@ -71,7 +71,9 @@ public:
 
   NS_DECLARE_STATIC_IID_ACCESSOR(HTTP_CHANNEL_PARENT_IID)
 
-  HttpChannelParent();
+  HttpChannelParent(const dom::PBrowserOrId& iframeEmbedding,
+                    nsILoadContext* aLoadContext,
+                    PBOverrideStatus aStatus);
 
   MOZ_MUST_USE bool Init(const HttpChannelCreationArgs& aOpenArgs);
 
@@ -231,10 +233,6 @@ protected:
   // Called to notify the parent channel to not send any more IPC messages.
   virtual mozilla::ipc::IPCResult RecvDeletingChannel() override;
   virtual mozilla::ipc::IPCResult RecvFinishInterceptedRedirect() override;
-  virtual mozilla::ipc::IPCResult RecvAsyncOpen(
-    const PBrowserOrId& aBrowser,
-    const SerializedLoadContext& aSerialized,
-    const HttpChannelCreationArgs& aOpenArgs) override;
 
 private:
   void UpdateAndSerializeSecurityInfo(nsACString& aSerializedSecurityInfoOut);
